Real website/Html/standard format/embêr.css
/* ... */
  
  .name {
    font-size: clamp(5.7rem, 25vw, 15rem);
    color: white;
    text-shadow: 4px 3px 5px #00000085;
    animation: go-up 1s forwards;
    opacity: 0;
    animation-delay: 0s;
  }
  
  .undername {
    font-size: clamp(1.5rem, 6vw, 4rem);
    color: white;
    text-shadow: 4px 3px 5px #000000;
    animation: go-up 1s forwards;
    opacity: 0;
    animation-delay: 0.3s;
  }
  
  @keyframes go-up {
    from {
      opacity: 0;
      transform: translateY(50px);
    }
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }




.mid-vid {
    display: flex;
    padding: 0px;
    position: absolute;
    z-index: 8;
    width: 100%;
    height: auto;
    padding: 0px;
    justify-content: center;
    align-items: center;
    animation-play-state: running;
    margin: 0;
    right: 50x;


}





.section-3 {
    position: absolute;
    z-index: 10;
    width: 100%;
    background-color: rgb(255, 255, 255);
    height: 2000px;
    top: 700px;
    transition: all .3 ease-in-out;
    background-repeat: no-repeat;
}


/* sustainabilityPage ids and classes */

.name1 {
    display: block;
    font-family: 'Playfair Display';
    font-weight: 150;
    font-size: 700%;
    letter-spacing: 3px;
    text-shadow: 4px 3px 5px #00000085;
    text-align:center;
    color: white;
    user-select: none;
    position: relative;
    top: 0px;
    font-weight: 0.2;
    z-index: 20;
    width: 100%;
    height:fit-content;
    transition: transform 2s ease-in-out;
    -webkit-transition: transform 2s ease-in-out;
    opacity: 0; 
    animation: go-up 1s forwards;
    font-weight: bold;
}

.section-heading {
    font-family: "Barlow Condensed";
    font-size: clamp(1.5rem, 6vw, 4rem);
    width: 100%; 
    text-align: center; 
    position: absolute;
    top: 15%;
    text-wrap: nowrap;
}

.h2 {
    font-family: "Barlow Condensed";
    font-size: clamp(1.5rem, 6vw, 4rem);
    width: 60%; 
    text-align: left; 
    top: 200px;
    left: 25px;
}

.caption {
    font-family: "Barlow Condensed";
    font-size: 26px;
    width: 100%; 
    text-align: center; 
    position:absolute;
    top: 23%;
}

.sustain {
    font-family: "Barlow Condensed";
    font-size: 20px;
    width: 50%; 
    text-align: left; 
    position: absolute;
    top: 400px;
    left: 50px;
    right: 25px;
}

.background-container {
    display: flex;
    position: absolute;
    z-index: 15;
    width: 100%;
    height: 850px;
    align-items: center;
    margin: 0;
    top:0px;
    background-image: url(https://i.postimg.cc/T1d3ZcPj/enviornment-background.png);
    background-size: 100% 100%;
}

/* Slideshow container */
.slideshow-container {
    max-width: 1000px;
    position: relative;
    top: 175px;
    margin: auto;
  }
  
/* Hide the images by default */
.mySlides {
    display: none;

}

#slide-img {
    height: 43vw;
    width:auto;

}
  
/* Next & previous buttons */
.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 500px;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}
  
/* Position the "next button" to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}
  
/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
    background-color: rgba(0,0,0,0.8);
}
  
/* Caption text */
.text {
    color: black;
    font-size: 20px;
    font-family: 'barlow condensed';
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    width: 100%;
    text-align: center;
    z-index: 200;
 }
  
/* The dots/bullets/indicators */
.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.dots{
    display: block;
    position: relative;
    text-align: center;
    z-index:200;
}
  
.active {
    background-color: transparent; 
    color: black;
    font-weight: bold;
}

.dot:hover {
    background-color: #717171;
}

.map {
    display: flex;
    flex-direction: column;
    justify-content:center;
    position: absolute;
    z-index: 11;
    width: 100%;
    height: 1000px;
    align-items: center;
    background-color: #EDE4D3;
    margin: 0;
    top: 1000px;
}

.sources {
    position: absolute;
    z-index: 100;
    width: 100%;
    background-color: #EDE4D3;
    height: 900px;
    top: 2480px;
    transition: all .3 ease-in-out;
    background-repeat: no-repeat;
}

.partnerships {
    position: absolute;
    z-index: 222;
    width: 100%;;
    height:900px;
    top: 3380px;
    background-color: #2D6A4F;
    transition: all .3 ease-in-out;
    background-repeat: no-repeat;
}

.gallery {
    position: absolute;
    z-index: 230;
    width: 100%;
    background-color: #FAF9F6;
    height: 580px;
    top: 1900px;
    transition: all .3 ease-in-out;
    background-repeat: no-repeat;
    box-shadow: 0px 0px 50px 20px rgba(6, 39, 0, 0.294);
}

#hydroponics {
    top: 300px;
    right: 150px;
    position: absolute;
    width: 500px;
    height: auto;
    user-select: none;
    z-index: 170;
    opacity: 100%;
}

#farm-interactive {
    display: block;
    position: relative; /* Position relative to this container */
    z-index: 171;
    width: 50vw; /* This makes the farm image responsive */
    height: auto; 
    margin: auto;
    left: 25vw;
    transform: translate(-50%, -40%);  
    background-size: 50vw; 
    background-position: center;
    background-repeat: no-repeat;
}

#calamansi {
    position: absolute; /* Absolute positioning within the farm-interactive container */
    width: 10%; /* Set width as percentage to make it responsive */
    object-fit: contain;
    transform: translate(180%, -540%); /* Fine-tune the position */
    cursor: pointer;
    z-index: 172; /* Ensure it's on top */
}
/* ... */

